--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "clsx": "^1.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
+    "react-use-scroll-to-element-hook": "^1.0.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
