--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "deploy": "aws s3 cp ./build s3://kpp-portfolio --recursive",
+    "predeploy": "npm run build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
